# WinZigC-Parser

./: CMakeLists.txt
.github/workflows/: ci.yaml
app/: main.cpp
docs/: Readme.md
include/common/: error.h  result.h
include/utils/: argparser.h  filereader.h  logger.h  tokenizer.h
src/utils/: argparser.cpp  filereader.cpp  logger.cpp
tests/unit/: test_argparser.cpp
